# confidence

./: .flake8  .gitignore  .readthedocs.yaml  AUTHORS.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  OWNERS.md  README.md  catalog-info.yaml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: confidence.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: Confidence Examples - Bayesian.ipynb  Confidence Examples - Frequentist.ipynb  Confidence Examples - Sample sizing.ipynb  Confidence Examples - Sequential.ipynb  Confidence Tutorial.ipynb  Sequential.ipynb
spotify_confidence/: __init__.py  chartgrid.py  examples.py  options.py
spotify_confidence/analysis/: __init__.py  confidence_utils.py  constants.py
spotify_confidence/analysis/abstract_base_classes/: confidence_abc.py  confidence_computer_abc.py  confidence_grapher_abc.py
spotify_confidence/analysis/bayesian/: bayesian_base.py  bayesian_models.py
spotify_confidence/analysis/frequentist/: boostrap_test.py  chartify_grapher.py  chi_squared.py  experiment.py  generic_computer.py  generic_test.py  multiple_comparison.py  nims_and_mdes.py  sample_ratio_test.py  sample_size_calculator.py  sequential_bound_solver.py  srm_test.py  statsmodels_computer.py  t_test.py  test.py  z_test.py  z_test_linreg.py
spotify_confidence/samplesize/: sample_size_calculator.py
tests/: test_plot_precision.py
tests/bayesian/: test_betabinomial.py
tests/frequentist/: test_bounds.py  test_chisquared.py  test_experiment.py  test_freqsamplesizecalculator.py  test_samplesizecalculator.py  test_srmtest.py  test_ttest.py  test_ztest.py  test_ztest_linreg.py
tests/samplesize/: test_samplesizecalculator.py
(+17 files in other folders)
