[metadata]
name = spotify-confidence
version = 2.7.6
author = Per Sillren
author_email = pers@spotify.com
description = Package for calculating and visualising confidence intervals, e.g. for A/B test analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spotify/confidence
project_urls =
    Bug Tracker = https://github.com/spotify/confidence/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.0.0,<2.0.0
    scipy>=1.0.0,<2.0.0
    pandas>=1.0.0,<2.0.0
    statsmodels>=0.12.0,<1.0.0
    chartify>=3.0.4,<4.0.0
    ipywidgets>=7.1.0

[options.packages.find]
where = .
