[metadata]
name = spotify-confidence
version = 3.0.0
author = Per Sillren
author_email = pers@spotify.com
description = Package for calculating and visualising confidence intervals, e.g. for A/B test analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spotify/confidence
project_urls =
    Bug Tracker = https://github.com/spotify/confidence/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0,<2.0.0
    scipy>=1.6.0,<1.8.0
    pandas>=1.2.0,<2.0.0
    statsmodels>=0.13.0,<1.0.0
    chartify>=4.0.2
    ipywidgets>=8.0.0

[options.packages.find]
where = .
